--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/theme": "^2.1.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@react-three/drei": "^9.16.0",
+    "@react-three/fiber": "^8.0.27",
+    "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/three": "^0.141.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.4"
