--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "three": "^0.141.0"
