--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme": "^2.1.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@react-three/drei": "^9.16.0",
     "@react-three/fiber": "^8.0.27",
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
