Changed default theme to light. Added neumorphism to work.

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "hamburger-react": "^2.5.0",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-awesome-slider": "^4.1.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.8",
     "three": "^0.141.0",
     "typewriter-effect": "^2.19.0"
   },
@@ -30,6 +30,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/three": "^0.141.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
