--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^6",
     "hamburger-react": "^2.5.0",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "18.2.0",
