--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme": "^2.1.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@react-three/drei": "^9.16.0",
     "@react-three/fiber": "^8.0.27",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^6",
+    "graphql": "^16.5.0",
     "hamburger-react": "^2.5.0",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
@@ -24,6 +28,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.8",
+    "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2",
+    "reading-time": "^1.5.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "three": "^0.141.0",
     "typewriter-effect": "^2.19.0"
   },
@@ -32,6 +41,7 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-image-gallery": "^1.0.5",
+    "@types/react-scroll": "^1.8.4",
     "@types/three": "^0.141.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
