--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.9.3",
     "@react-three/drei": "^9.16.0",
     "@react-three/fiber": "^8.0.27",
+    "@vercel/analytics": "^0.1.8",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
